--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,10 +9,7 @@ h1 {
   font-family: "Playfair Display", serif;
   font-weight: bold;
 }
-p {
-  font-family: "Poppins", sans-serif;
-  font-weight: normal;
-}
+
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -37,10 +34,55 @@ h6 {
   font-family: var(--heading-font-family);
   font-weight: bold;
 }
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
+  line-height: 1.5;
+  font-size: 24px;
+}
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
   color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+.col {
+  flex: 1 0 0%;
+}
+@media (max-width: 900px) {
+  .hero {
+    padding: 80px 20px;
+  }
+  h1 {
+    font-size: 44px;
+    line-height: 2;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  h2 {
+    font-size: 44px;
+  }
+}
+.text-muted {
+  color: #6c757d;
+}
+p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+}
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
