--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -81,6 +81,9 @@ h6 {
 .col {
   flex: 1 0 0%;
 }
+.about-section {
+  padding: 160px 20px;
+}
 @media (max-width: 900px) {
   .hero {
     padding: 80px 20px;
@@ -95,6 +98,18 @@ h6 {
   }
   h2 {
     font-size: 44px;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0;
+  }
+  .about-section h1 {
+    font-size: 64px;
+    line-height: 80px;
+  }
+  .about-section h2 {
+    font-size: 18px;
+    font-family: var(--default-font-family);
   }
 }
 h2 {
@@ -137,4 +152,16 @@ footer .github {
 footer .github-link {
   text-decoration: none;
   color: var(--branding-color);
+}
+
+.about-section-content {
+  margin: 30px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
 }
