--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,7 +2,10 @@
   --branding-color: #6c63ff;
   --secondary-color: #f9f7fe;
   --heading-font-family: "Playfair Display", serif;
-  --default-font-family: "Poppins", san-serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+body {
+  font-family: var(--default-font-family);
 }
 .bg-light {
   background: #f8f9fa;
@@ -81,7 +84,7 @@ h6 {
 .col {
   flex: 1 0 0%;
 }
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
 @media (max-width: 900px) {
@@ -99,15 +102,15 @@ h6 {
   h2 {
     font-size: 44px;
   }
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
   }
-  .about-section h1 {
+  .content h1 {
     font-size: 64px;
     line-height: 80px;
   }
-  .about-section h2 {
+  .content h2 {
     font-size: 18px;
     font-family: var(--default-font-family);
   }
@@ -154,14 +157,22 @@ footer .github-link {
   color: var(--branding-color);
 }
 
-.about-section-content {
+.content {
   margin: 30px;
 }
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
+}
+.content h3 {
+  font-size: 26px;
+  line-height: 1.5;
+  font-family: var(--default-font-family);
+}
+.content p {
+  font-size: 14px;
 }
