--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,37 +1,41 @@
 :root {
-  --branding-color: #6c63ff;
-  --secondary-color: #f9f7fe;
+  --branding-color: #9977b2;
+  --secondary-color: #cd8cb9;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
 body {
   font-family: var(--default-font-family);
 }
-.bg-light {
-  background: #f8f9fa;
-}
-.fixed-top {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 1030;
-}
-.navbar > .container {
-  display: flex;
-  flex-wrap: inherit;
-  align-items: center;
-  justify-content: space-between;
-}
-.navbar-light .navbar-brand {
-  font-family: var(--heading-font-family);
-  color: #6c63ff;
-}
-.navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.55);
-  border-color: rgba(0, 0, 0, 0.1);
+.logo {
+  max-height: 40px;
 }
 
+nav {
+  padding: 20px 0;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
 h1 {
   color: black;
   font-family: "Playfair Display", serif;
@@ -41,7 +45,7 @@ h1 {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 .hero p {
   font-size: 36px;
@@ -85,12 +89,9 @@ h6 {
   flex: 1 0 0%;
 }
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 @media (max-width: 900px) {
-  .hero {
-    padding: 80px 20px;
-  }
   h1 {
     font-size: 44px;
     line-height: 2;
@@ -157,7 +158,7 @@ footer .email-link {
   font-size: 24px;
 }
 footer .social-links a {
-  margin: 0 40px;
+  margin: 0 20px;
   color: var(--branding-color);
   background: var(--secondary-color);
   padding: 10px 14px;
